Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2006-05-15 Kimmo
 PATCH: [ 1489133 ] Manual: document new filter location(s)
  Docs/Users/Manual: Filters.xml
 PATCH: [ 1489091 ] Enable Help/Index
  Src: MainFrm.cpp
 PATCH: [ 1489098 ] Doesn't open Help TOC correctly
  Src: MainFrm.cpp
 BUG: [ 1487856 ] Long delay if many language dlls
  Src: Merge.cpp
  Src/Common: LanguageSelect.cpp LanguageSelect.h
 BUG: [ 1487854 ] ASSERT in CCrystalTextView::OnPrint
  Fix suggested by Mallato
  Src/editlib: ccrystaltextview.cpp
 Graphic Design: Alexander Skinner
  Docs/Users: Contributors.txt
 BUG: [ 1478057 ] Memory leak when cancelling print preview
  Fix suggested by Mallato
  Src/editlib: ccrystaltextview.cpp 

2006-05-15 Gal
 PATCH: [ 1488637 ] PHP/ASP Syntax Highlighting Fix (Bug 1441643)
  Src/editlib: asp.cpp php.cpp   

2006-05-14 Kimmo
 PATCH: [ 1485861 ] Czech translation - update
  Submitted by: Jan Hryz
  Src/Languages/Czech/MergeCzec.rc
 PATCH: [ 1483553 ] Swedish MergeSwedish.rc 1.304 2.5.3.7 update
  Submitted by Hans Eriksson
  Src/Languages/Swedish: MergeSwedish.rc
 PATCH: [ 1484004 ] Manual: new Open-dialog screenshot and small fixes
  Docs/Users/Manual: Quick_start.xml
  Docs/Users/Manual/screenshots: OpenDlg1.gif
 PATCH: [ 1484013 ] Manual: small changes to Introduction chapter
  Docs/Users/Manual: Introduction.xml
 PATCH: [ 1484092 ] Manual: preliminary whats new list for 2.5
  Docs/Users/Manual: Whatsnew_2_1.xml
 PATCH: [ 1484101 ] Manual: Add index
  Docs/Users/Manual: WinMerge_help.xml
 PATCH: [ 1484142 ] Manual: update some options descriptions
  Docs/Users/Manual: Configuration.xml

2006-05-08 Kimmo
 PATCH: [ 1483344 ] Fix creating private file filters
  Src: FileFiltersDlg.cpp
 PATCH: [ 1483486 ] Add commenting for CLogFile
  Src/Common: LogFile.cpp LogFile.h

2006-05-07 Kimmo
 PATCH: [ 1483107 ] Remove dublicated code from folder compare progress dlg