@@ -2,6 +2,10 @@ Src\Changes.txt
 Add new items to top.
 (This summarizes all changes to all files under Src, including Src\Languages.)
 
+2006-05-17 Kimmo
+ PATCH: [ 1489824 ] Better default folder for user filters
+  Src: MainFrm.cpp
+
 2006-05-15 Kimmo
  PATCH: [ 1489133 ] Manual: document new filter location(s)
   Docs/Users/Manual: Filters.xml
